--- a/src/app/layout/layout.css
+++ b/src/app/layout/layout.css
@@ -2,9 +2,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    max-width: 1000px;
+    width: 100vw;
+    max-width: 1200px;
     height: calc(100vh - 80px);
     max-height: calc(100vh - 80px);
     overflow: scroll;
-    border: 1px solid red;
+    border: 1px solid #EEE;
 }
