--- a/src/app/layout/layout.css
+++ b/src/app/layout/layout.css
@@ -1,11 +1,12 @@
 .container {
     display: flex;
-    align-items: center;
     justify-content: center;
     width: 100vw;
+    margin: 0 auto;
     max-width: 1200px;
     height: calc(100vh - 80px);
     max-height: calc(100vh - 80px);
     overflow: scroll;
     border: 1px solid #EEE;
+    padding: 20px;
 }
